--- a/style.css
+++ b/style.css
@@ -32,15 +32,14 @@ img {
     position: absolute;
 }
 
-#coke:hover > .info{
+.menu-item:hover > .info{
     visibility: visible;
 }
 
 .info {
     visibility: hidden;    
     word-wrap: break-word;
-    margin-top:1px;
-    padding-top: 1.1em;
+    margin: 2px;
     position:absolute;
     background-color: purple;
-  }
+}
