Attempted at making description Changed stylesheet formating

--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,8 @@
 	row-gap: 45px;
 }
 
+
+
 .menu-item {
 	aspect-ratio: 1 / 1.6;
 	border: 0.5vmin solid rgb(3, 169, 244);
@@ -23,6 +25,8 @@
 	border-radius: 20px;
 	transition: scale .5s;
 }
+
+
 
 .menu-item > img {
     border-radius: inherit;
@@ -42,14 +46,27 @@
 	bottom: 20px;
 }
 
-.cover {
-	aspect-ratio: 1 / 1.6;
-	display: none;
+.menu-item > .description {
+	transition: opacity 2s ease;
+	transition: top .5s ease;
+	opacity: 0;
+
 	position: absolute;
-	background-color: white;
-	width: 100px;
-	border-radius: inherit;
+
+	left: 15px;
+	top: 40px;
+	
+	
+	/*bottom: 90px;
+	left: 15px;*/
 }
+
+.menu-item:hover > .description {
+	opacity: 1;
+	top: 0px;
+}
+
+
 
 #salad {
 	grid-column: 1;
