--- a/style.css
+++ b/style.css
@@ -1,45 +1,134 @@
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    background: linear-gradient(
-        70deg,
-        darkblue,
-        lightblue
-    );
-    height: 100%;
-    width: 100%;
-    color: white;
-}
-
 .menu {
-    width: 500px;
-    height: 500px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+	padding-top: 50px;
+	padding-left: 25px;
+
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    border: 10px solid red;
-    border-radius: 10px;
-    padding-top: 50px;
+
+	width: 200px;
+	height: 200px;
+
+	gap: 30px;
+	row-gap: 45px;
 }
 
-img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    position: absolute;
+
+
+.hidden {
+	opacity: 0;
 }
 
-.menu-item:hover > .info{
-    visibility: visible;
+
+
+.menu-item {
+	aspect-ratio: 1 / 1.6;
+	border: 0.5vmin solid rgb(3, 169, 244);
+	cursor: pointer;
+	position: relative;
+	width: 100px;
+	display: grid;
+	place-items: center;
+	border-radius: 20px;
+	transition: scale .5s;
 }
 
-.info {
-    visibility: hidden;    
-    word-wrap: break-word;
-    margin: 2px;
-    position:absolute;
-    background-color: purple;
+.menu-item > .picture {
+	aspect-ratio: 1 / 1;
+	position: relative;
+	width: 100px;
+    border-radius: inherit;
+	transition: width .5s, bottom .5s;
+	bottom: 0;
 }
+
+.menu-item > .icons > .icon {
+	opacity: 0;
+	transition: opacity .5s ease;
+
+	position: relative;
+	left: 35px;
+}
+
+.menu-item > #title {
+	position: relative;
+    transition: bottom .5s ease 0s;
+	bottom: 0;
+}
+
+.menu-item > .description {
+	transition: opacity .75s ease, top .5s ease;
+	opacity: 0;
+
+	position: absolute;
+
+	left: 15px;
+	top: 40px;
+}
+
+.menu-item > .icons {
+	position: relative;
+	left: -35px;
+}
+
+
+
+.menu-item:hover {
+	scale: 1.5;
+}
+
+.menu-item:hover > #title {
+	bottom: 20px;
+}
+
+.menu-item:hover > .picture {
+	width: 75px;
+	bottom: 4px;
+}
+
+.menu-item:hover > .icons > .icon {
+	opacity: 1;
+}
+
+.menu-item:hover > .description {
+	opacity: 1;
+	top: 0px;
+}
+
+.menu-item:hover > .icons > .icon:hover {
+	opacity: 0;
+	/*? DO STUFF ?*/
+}
+
+
+
+#salad {
+	grid-column: 1;
+	grid-row: 1;
+}
+#sandwich {
+	grid-column: 2;
+	grid-row: 1;
+}
+#pizza {
+	grid-column: 3;
+	grid-row: 1;
+}
+#coke {
+	grid-column: 1;
+	grid-row: 2;
+}
+#water {
+	grid-column: 2;
+	grid-row: 2;
+}
+#icecream {
+	grid-column: 1;
+	grid-row: 3;
+}
+#cake {
+	grid-column: 2;
+	grid-row: 3;
+}
+
+/*?  CREDITS  ?*/
