Tweaked style-light.css Removed TODO.md

--- a/menu/style-light.css
+++ b/menu/style-light.css
@@ -1,9 +1,9 @@
 body {
     background: linear-gradient(
         to right,
-        lightsteelblue,
-        slategrey,
-        lightsteelblue
+        bisque,
+        cornsilk,
+        bisque
     );
     color: black;
     background-size: 200%;
