--- a/menu/style-dark.css
+++ b/menu/style-dark.css
@@ -1,13 +1,13 @@
 body {
     background: linear-gradient(
-        to right,
+        60deg,
         darkslategrey,
         lightslategrey,
         darkslategrey
     );
     color: white;
-    background-size: 200%;
-    animation: background-pan 25s linear infinite;
+    background-size: 100%;
+    /*animation: background-pan 25s linear infinite;*/
 }
 
 .menu-item {
