--- a/magic/style.css
+++ b/magic/style.css
@@ -171,3 +171,28 @@ input:checked + .slider:before {
 .slider.round:before {
 	border-radius: 50%;
 }
+
+#bg_toggle {
+	border-radius: 0 8px 8px 0;
+	border: none;
+	height: 50px;
+	width: 150px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+	border: #0044ff 3px solid;
+	/* background: #424242; */
+	background-color: #1a1a1a;
+	color: white;
+	font-weight: bold;
+	font-size: 0.9rem;
+
+	transform: translateX(-3px);
+
+	box-shadow: 0px 0px 25px 2px deepskyblue;
+}
+
+#toggle {
+	color: white;
+}
