--- a/magic/style.css
+++ b/magic/style.css
@@ -31,7 +31,9 @@ h1 {
 	margin-top: 20px;
 	width: fit-content;
 	font-size: 50px;
+	text-decoration: overline underline;
 }
+
 ol,
 li {
 	margin: auto;
@@ -66,6 +68,8 @@ li {
 	color: white;
 	border-radius: 10px;
 	font-family: "Fredoka";
+
+	margin-bottom: 30px;
 }
 
 .block:hover {
@@ -100,9 +104,15 @@ li {
 	margin: 5%;
 }
 
-#reveal-modal {
+#reveal_modal {
 	margin: auto;
-	display: block;
+	/* display: block; */
+
+	border-radius: 20px;
+	width: 20vw;
+	height: 40vh;
+	display: grid;
+	box-shadow: black 0px 20px 50px 20px;
 }
 
 #answer {
@@ -180,10 +190,12 @@ input:checked + .slider:before {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	
-	border: #0044ff 3px solid;
+
+	/* filter: blur(2px); */
+	/* border: #0044ff 3px solid; */
 	/* background: #424242; */
-	background-color: #1a1a1a;
+	background-color: #0059ac;
+	mix-blend-mode: color-burn;
 	color: white;
 	font-weight: bold;
 	font-size: 0.9rem;
@@ -191,8 +203,4 @@ input:checked + .slider:before {
 	transform: translateX(-3px);
 
 	box-shadow: 0px 0px 25px 2px deepskyblue;
-}
-
-#toggle {
-	color: white;
 }
