--- a/info_square/style.css
+++ b/info_square/style.css
@@ -6,12 +6,16 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    position: relative;
+    width: 500px;
+    aspect-ratio: 16/9;
+    background-image: url("./background.jpg");
+    background-size: cover;
+    border-radius: 10px;
+    padding: 10px;
 }
 
-#background-img {
-    grid-row: 0 / span 2;
-    grid-column: 0 / span 2;
-    width: 250px;
-    height: 250px;
-    border-radius: 10px;
+#title {
+    grid-row: 0;
+    grid-column: 0;
 }
