--- a/info_square/style.css
+++ b/info_square/style.css
@@ -1,3 +1,10 @@
+:root {
+    --card-width: 540px;
+    --half-card-width: calc(var(--card-width)/2);
+    --card-height: calc(var(--card-width)/16 * 9);
+    --half-card-width: calc(var(--card-height)/2);
+}
+
 body {
     background-color: cornflowerblue;
 }
@@ -7,15 +14,26 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     position: relative;
-    width: 500px;
+    width: var(--card-width);
     aspect-ratio: 16/9;
     background-image: url("./background.jpg");
     background-size: cover;
     border-radius: 10px;
     padding: 10px;
+    vertical-align: middle
 }
 
-#title {
-    grid-row: 0;
-    grid-column: 0;
+.info {
+    width: calc(var(--half-card-width) + 60px);
+    height: calc(var(--card-height) - 10px);
+    backdrop-filter: none;
+    transition: backdrop-filter 0.5s;
+    margin: auto;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+}
+
+.info:hover {
+    backdrop-filter: blur(10px);
 }
