--- a/info_square/style.css
+++ b/info_square/style.css
@@ -16,7 +16,7 @@ body {
     position: relative;
     width: var(--card-width);
     aspect-ratio: 16/9;
-    background-image: url("./background.jpg");
+    background-image: url("./background-high_res.jpg"), url("./background-low_res.jpg");
     background-size: cover;
     border-radius: 10px;
     padding: 10px;
@@ -26,7 +26,7 @@ body {
 .info {
     width: calc(var(--half-card-width) + 60px);
     height: calc(var(--card-height) - 10px);
-    backdrop-filter: none;
+    backdrop-filter: zoom(10px);
     transition: backdrop-filter 0.5s;
     margin: auto;
     padding: 10px;
