--- a/style.css
+++ b/style.css
@@ -20,3 +20,13 @@ body {
     from {background-position: 0%;}
     to {background-position: -200%;}
 }
+
+button {
+    width: 100px;
+    background-color:cornflowerblue;
+    transition: width 0.4s, background-color 0.4s;
+}
+button:hover {
+    width: 150px;
+    background-color:cadetblue;
+}
