Improved storytelling guide

--- a/botc/storytelling/style.css
+++ b/botc/storytelling/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
 body {
-    background-color: rgba(0, 0, 0, 0.548);
+    background-color: slategrey;
     color: white;
     font-family: "Fredoka", sans-serif;
 }
